# GCS

./: .env  .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CHANGELOG_ARCHIVE.md  CHECKLIST_COMPLETED.md  CONSOLE_TO_LOGGER_MIGRATION.md  DEVELOPER_GUIDELINES.md  README-AI.md  README.md  Start_GCS_Server.bat  TESTING.md  TEST_GUIDE.md  analyze_project.cjs  check_globals_placement.js  check_registry.js  clean_project_json_text.js  cleanup_project.cjs  debug-log.txt  debug_load_logic.js  debug_stage_view.cjs  detailed_test_output.txt  detailed_test_output_2.txt  detailed_test_output_2_utf8.txt  detailed_test_output_utf8.txt  docs.cjs  e2e_results.json  e2e_results_utf8.json  eslint.config.js  find_keys.js  fix.cjs  fix.js  fix_menu.cjs  fix_project_data.cjs  fix_ssot.bat  gitlog.txt  index.html  log.txt  move_globals_to_blueprint.js  my_game.json  (+89 more)
.agent/: test-dto.ts  test-obj.js  test-proxy-timer.ts  test-runtime-timer.ts  test-timer.ts
ToDoList/: Architecture_Audit_NewFeatures.md  Component_Registration_Findings.md  Dead_Code_Audit.md  Electron_Focus_Stability_Plan.md  Electron_Migration_Plan.md  Retire_Legacy_Runtime_Plan.md  Security_Audit.md  Senior_Audit_Comprehensive.md  Tauri_Config_Audit.md  Tauri_Migration_Feasibility.md  Test_Coverage_Plan.md  Theme_Switching_Plan.md  Touch_Pointer_Support_Plan.md  TypeScript_Any_Audit.md  api_realisierung.md  erweiterter_testplan.md  future_features.md  html_to_gcs_importer_concept.md  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
(+1005 files in other folders)
