[package]
name = "game-builder"
version = "0.1.0"
description = "Game Builder Offline Editor"
authors = ["Rolfr"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2.5.0"
tauri-plugin-dialog = "2.7.0"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
strip = true
panic = "abort"
